--- a/app/src/main/res/layout/level_selector.xml
+++ b/app/src/main/res/layout/level_selector.xml
@@ -10,6 +10,7 @@
     tools:context=".LevelSelector">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/levels_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
