--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -2,24 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/levelSelector"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    android:orientation="vertical"
-    tools:context=".LevelSelector">
+    tools:context=".Gameplay">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarLevelSelector"
+        android:id="@+id/toolbarGameplay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:menu="@menu/toolbar_general" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/levels_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 </LinearLayout>
