--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -26,7 +26,7 @@
         android:layout_marginRight="50dp"
         android:layout_weight="1.5"
         android:rotationX="0"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@drawable/img_ahorcadofinal"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
