arreglo bug + implementacio aparicio lletres de la paraula

--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -24,8 +24,7 @@
         android:layout_height="220dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="32dp"
-        android:src="@drawable/img_ahorcadofinal"
-        android:contentDescription="Imagen del ahorcado" />
+        android:src="@drawable/img_ahorcadofinal" />
 
     <!-- Palabra oculta -->
     <TextView
