--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#A5D6A7</color>
     <color name="red">#EF9A9A</color>
+    <color name="grey">#E0E0E0</color>
 </resources>
