--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -6,8 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:padding="16dp"
-    android:background="#F8F8F8">
+    android:background="@color/white">
+    <!-- ESTRUCTURA HECHA CON IA -->
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarGameplay"
@@ -32,10 +32,10 @@
         android:id="@+id/textWord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="_ _ _ _ _"
+        android:text=""
         android:textSize="32sp"
         android:textStyle="bold"
-        android:textColor="#222"
+        android:textColor="@color/black"
         android:layout_marginBottom="24dp" />
 
     <!-- Grid con botones de letras -->
@@ -47,9 +47,8 @@
         android:rowCount="7"
         android:alignmentMode="alignMargins"
         android:useDefaultMargins="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
         android:gravity="center" />
-
-
-    <!-- TECLADO DE LETRAS (Botones A-Z) -->
 
 </LinearLayout>
