--- a/app/src/main/res/layout/level_selector.xml
+++ b/app/src/main/res/layout/level_selector.xml
@@ -5,7 +5,7 @@
     android:id="@+id/levelSelector"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".LevelSelector">
 
