--- a/app/src/main/res/layout/recycler_layout_manager.xml
+++ b/app/src/main/res/layout/recycler_layout_manager.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
-    android:background="#FF9700"
+    android:background="@color/orange"
 
     android:gravity="center_vertical"
     android:orientation="horizontal"
@@ -29,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
-                android:text="Palabra:"
+                android:text="@string/wordLevelSelector"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
@@ -37,7 +36,7 @@
                 android:id="@+id/textWord"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text=""
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -53,7 +52,7 @@
                 android:id="@+id/textLettersLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Letras:"
+                android:text="@string/letterCountText"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -62,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="TextView"
+                android:text=""
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -73,7 +72,6 @@
         android:id="@+id/imageDifficulty"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:scaleType="centerCrop"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
+        android:scaleType="centerCrop" />
 
 </LinearLayout>
