--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="green">#A5D6A7</color>
     <color name="red">#EF9A9A</color>
     <color name="grey">#E0E0E0</color>
+    <color name="orange">#FF9700</color>
 </resources>
