UI Acabada + light / dark mode

--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -6,7 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:background="@color/white">
+    android:background="@color/backgroundColor">
+
     <!-- ESTRUCTURA HECHA CON IA -->
 
     <androidx.appcompat.widget.Toolbar
