--- a/app/src/main/res/layout-land/activity_gameplay.xml
+++ b/app/src/main/res/layout-land/activity_gameplay.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/gameplayLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:background="@color/backgroundColor"
     android:gravity="center_horizontal"
-    android:background="@color/white">
+    android:orientation="vertical">
     <!-- ESTRUCTURA HECHA CON IA -->
 
     <androidx.appcompat.widget.Toolbar
@@ -28,10 +28,10 @@
             android:id="@+id/imgAhorcado"
             android:layout_width="220dp"
             android:layout_height="220dp"
+            android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="32dp"
-            android:src="@drawable/img_ahorcado_0"
-            android:layout_gravity="center"/>
+            android:src="@drawable/img_ahorcado_0" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,12 +42,12 @@
                 android:id="@+id/textWord"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginBottom="24dp"
                 android:text=""
                 android:textColor="@color/black"
                 android:textSize="32sp"
-                android:textStyle="bold"
-                android:layout_gravity="center"/>
+                android:textStyle="bold" />
 
             <GridLayout
                 android:id="@+id/letterGrid"
