--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".SplashScreen">
 
     <TextView
@@ -16,7 +17,8 @@
         android:layout_weight="0"
         android:text="@string/gameTitle"
         android:textAlignment="center"
-        android:textSize="50sp" />
+        android:textSize="50sp"
+        android:textColor="@color/black" />
 
     <ImageView
         android:id="@+id/imageSplash"
@@ -36,6 +38,7 @@
         android:layout_weight="3"
         android:textAlignment="center"
         android:textSize = "30sp"
-        android:text="@string/touchToContinue" />
+        android:text="@string/touchToContinue"
+        android:textColor="@color/black"/>
 
 </LinearLayout>
