--- a/app/src/main/res/layout/recycler_layout_manager.xml
+++ b/app/src/main/res/layout/recycler_layout_manager.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
-    android:background="@color/orange"
+    android:background="@color/onBackgroundColor"
 
     android:gravity="center_vertical"
     android:orientation="horizontal"
@@ -30,14 +30,16 @@
                 android:layout_marginEnd="12dp"
                 android:text="@string/wordLevelSelector"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/onPrimaryColor"/>
 
             <TextView
                 android:id="@+id/textWord"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textColor="@color/onPrimaryColor"/>
         </LinearLayout>
 
         <!-- Fila 2: Cantidad de letras -->
@@ -54,7 +56,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/letterCountText"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="@color/onPrimaryColor"/>
 
             <TextView
                 android:id="@+id/textLettersCount"
@@ -62,7 +65,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text=""
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textColor="@color/onPrimaryColor"/>
         </LinearLayout>
 
     </LinearLayout>
