--- a/app/src/main/res/menu/toolbar_general.xml
+++ b/app/src/main/res/menu/toolbar_general.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+<menu
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id= "@+id/toolbar">
     <item
-        android:id="@+id/settings"
-        android:icon="@android:drawable/ic_menu_preferences"
-        android:title="Settings" />
+        android:id="@+id/darkLightItem"
+        android:title="@string/lightDarkTheme"/>
 </menu>
